resources/TempoOtel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing-system
spec:
  finalizers:
  - kubernetes
