resources/TempoOtel/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
      containers:
        - name: minio
          image: minio/minio
          args:
            - server
            - /storage
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: storage
              mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: api
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: console
  selector:
    app: minio
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
